# kinase-library

./: .gitignore  Snakefile  pyproject.toml
src/kinase_library/scripts/: __init__.py
src/scripts/: run_mea_cli.py  scan_motifs_cli.py
tests/: conftest.py  test_diff_phos_data.py  test_enrichment_data.py  test_phosphoproteomics.py  test_substrate.py  test_utils.py
tests/data/inputs/: diff_phos_ser_thr_input.csv  diff_phos_tyrosine_input.csv  enrichment_background_ser_thr_input.csv  enrichment_background_tyrosine_input.csv  enrichment_foreground_ser_thr_input.csv  enrichment_foreground_tyrosine_input.csv  phosphoproteomics_sequence_input.csv
tests/data/outputs/: diff_phos_ser_thr_output.csv  diff_phos_tyrosine_output.csv  enrichment_ser_thr_output.csv  enrichment_tyrosine_output.csv  phosphoproteomics_ser_thr_output.csv  phosphoproteomics_tyrosine_output.csv
