[project]
name = "kinase-library"
version = "1.0.0"
description = "The Kinase Library Project: a Global Atlas of the Human Protein Kinome"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-SA-3.0" }
authors = [
    { name = "yaront", email = "tmy2110@cumc.columbia.edu" },
    { name = "harinlee0803", email = "harin.lee@cellsignal.com" },
    { name = "sean-landry", email = "sean.landry@cellsignal.com" },
    { name = "wolski", email = "witold.wolski@fgcz.uzh.ch" },
]
keywords = [
    "kinase",
    "phosphorylation",
    "phosphoproteomics",
    "kinase enrichment",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "natsort",
    "tqdm",
    "pyarrow",
    "biopython",
    "gseapy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "statsmodels",
    "adjustText",
    "cyclopts",
]

[project.optional-dependencies]
docs = [
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "nbsphinx",
    "myst-parser",
]

[project.urls]
Source = "https://github.com/wolski/kinase-library"

[project.scripts]
scan-motifs = "kinase_library.scripts.scan_motifs_cli:app"
run-mea = "kinase_library.scripts.run_mea_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]
